--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "dashborad-app",
+  "name": "Dashboard App",
   "version": "1.0.0",
-  "description": "Dashboard-App created using Node.js, MongoDb, Express.js",
+  "description": "Dashboard App created using NodeJS + ExpressJs + MongoDb",
   "main": "app.js",
   "scripts": {
     "start": "node app.js"
@@ -20,5 +20,12 @@
   "bugs": {
     "url": "https://github.com/imsangram/Dashboard-App/issues"
   },
-  "homepage": "https://github.com/imsangram/Dashboard-App#readme"
+  "homepage": "https://github.com/imsangram/Dashboard-App#readme",
+  "dependencies": {
+    "@types/node": "^13.7.1",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.9.1",
+    "nodemon": "^2.0.2"
+  }
 }
