--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
   },
   "homepage": "https://github.com/imsangram/Dashboard-App#readme",
   "dependencies": {
+    "@hapi/joi": "^17.1.0",
     "@types/node": "^13.7.1",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.9.1",
