--- a/package.json
+++ b/package.json
@@ -25,11 +25,16 @@
     "@hapi/joi": "^17.1.0",
     "@types/node": "^13.7.1",
     "bcryptjs": "^2.4.3",
+    "compression": "^1.7.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "helmet": "^3.21.2",
+    "http-status": "^1.4.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.1",
-    "nodemon": "^2.0.2"
+    "mongoose": "^5.9.1"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "morgan": "^1.9.1",
+    "nodemon": "^2.0.2"
+  }
 }
