--- a/package.json
+++ b/package.json
@@ -31,10 +31,10 @@
     "helmet": "^3.21.2",
     "http-status": "^1.4.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.1"
+    "mongoose": "^5.9.1",
+    "morgan": "^1.9.1"
   },
   "devDependencies": {
-    "morgan": "^1.9.1",
     "nodemon": "^2.0.2"
   }
 }
